2014-11-10  Kenjiro NAKAYAMA  <nakayamakenjiro@gmail.com>

        * gnus/mm-url.el (mm-url-encode-multipart-form-data):
        Restore to handle "multipart/form-data" by eww.

2014-11-07  Tassilo Horn  <tsdh@gnu.org>

	* gnus-start.el (gnus-activate-group): Fix typo reported by Tim
	Landscheidt.

2014-10-29  Paul Eggert  <eggert@cs.ucla.edu>

	Simplify use of current-time and friends.
	* gnus-delay.el (gnus-delay-article):
	* gnus-sum.el (gnus-summary-read-document):
	* gnus-util.el (gnus-seconds-today, gnus-seconds-month):
	* message.el (message-make-expires-date):
	Omit unnecessary call to current-time.
	* gnus-util.el (gnus-float-time): Simplify to an alias because
	time-to-seconds now behaves like float-time with respect to nil arg.
	(gnus-seconds-year): Don't call current-time twice to get the current
	time stamp, as this can lead to inconsistent results.

2014-10-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-mode-line-buffer-identification):
	Don't add image data for a non-graphic display (bug#18813).

2014-10-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-mode-line-buffer-identification): Don't shadow
	load-path, it blocks autoloading of find-image (bug#18813).

2014-10-24  enami tsugutomo  <tsugutomo.enami@jp.sony.com>

	* nnimap.el (nnimap-wait-for-response): Ignore NOOP response requested
	to keep connection open (bug#18728).

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* Merge in all changes up to 24.4 release.

2014-10-15  Jorge A. Alfaro-Murillo  <jorge.alfaro-murillo@yale.edu>  (tiny change)

	* message.el (message-insert-signature): Use `newline' instead of
	inserting explicit "\n".

2014-10-15  Sylvain Chouleur  <sylvain.chouleur@gmail.com>

	* gnus-icalendar.el: Support vcal format timezones.
	(gnus-icalendar-event--decode-datefield): Use icalendar functions to
	compute dates with associated timezone.
	(gnus-icalendar-event-from-ical): Compute all timezones.

2014-10-14  Teodor Zlatanov  <tzz@lifelogs.com>
